Fix font sizing on mobile

--- a/src/features/board/Board.module.css
+++ b/src/features/board/Board.module.css
@@ -22,6 +22,13 @@
   font-size: 100%;
   line-height: 0.75;
 }
+
+@media screen and (pointer: none), (pointer: coarse) {
+  .Letter {
+    font-size: 75% !important;
+  }
+}
+
 .Incorrect {
   color: var(--guess-text-red);
 }
